--- a/index.html
+++ b/index.html
@@ -12,159 +12,55 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/app.js" defer></script>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-light bg-dark text-white">
       <div class="container-fluid">
-        <a class="navbar-brand text-white">Product Management System</a>
+        <a class="navbar-brand text-white" href="#"
+          ><img src="./img/PMS-logo.png" alt="logo" class="nav__logoImg--size"
+        /></a>
         <button
-          class="btn btn-primary"
-          data-bs-toggle="modal"
-          data-bs-target="#addProduct"
-          data-bs-whatever="@mdo"
+          class="navbar-toggler bg-white"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-          Add Product
+          <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
-    </nav>
-    <!-- ajdsfhnafd -->
-
-    <div
-      class="modal fade"
-      id="addProduct"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Product Details</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form id="form-of-product">
-              <div class="mb-3">
-                <label class="col-form-label">Product Id:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="id"
-                  placeholder="Enter the Product Id"
-                />
-                <small id="id-error" class="form-text text-danger d-none"
-                  >Please enter the 5-20 characters id.</small
-                >
-              </div>
-              <div class="mb-3">
-                <label class="col-form-label">Product Name:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  placeholder="Enter the Product Name"
-                />
-                <small id="name-error" class="form-text text-danger d-none"
-                  >Please enter the 5-12 characters id.</small
-                >
-              </div>
-              <div class="mb-3">
-                <label class="col-form-label">Product Image:</label>
-                <textarea
-                  class="form-control"
-                  id="imgUrl"
-                  placeholder="Enter the Image Url"
-                ></textarea>
-                <small id="img-error" class="form-text text-danger d-none"
-                  >Please enter the 5-12 characters id.</small
-                >
-              </div>
-              <div class="mb-3">
-                <label class="col-form-label">Product Description:</label>
-                <textarea
-                  class="form-control"
-                  id="description"
-                  placeholder="Enter the Product Description"
-                ></textarea>
-                <small
-                  id="description-error"
-                  class="form-text text-danger d-none"
-                  >Please enter the 5-12 characters id.</small
-                >
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button id="submit-form" class="btn btn-primary">
-              Add Product
-            </button>
-          </div>
+        <div class="collapse navbar-collapse ms-2" id="navbarSupportedContent">
+          <ul
+            class="navbar-nav me-auto mb-2 mb-lg-0 w-100 d-flex justify-content-between"
+          >
+            <li class="nav-item">
+              <a class="navbar-brand text-white" href="#products">Products</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="navbar-brand bg-white text-dark p-2 rounded"
+                href="#addProduct"
+                >Add Product</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
+    </nav>
+    <div id="root"></div>
+    <div
+      class="alert alert-success me-3 collapse"
+      role="alert"
+      id="action-alert"
+    >
+      A Product added successfully !!
     </div>
-
-    <!-- <div id="backdrop"></div>
-    <div class="modal" id="add-modal">
-      <div class="modal__content">
-        <label for="title">Movie Title</label>
-        <input type="text" name="title" id="title" />
-        <label for="image-url">Image URL</label>
-        <input type="text" name="image-url" id="image-url" />
-        <label for="rating">Your Rating</label>
-        <input
-          type="number"
-          step="1"
-          max="5"
-          min="1"
-          name="rating"
-          id="rating"
-        />
-      </div>
-      <div class="modal__actions">
-        <button class="btn btn--passive">Cancel</button>
-        <button class="btn btn--success">Add</button>
-      </div>
-    </div>
-    <div class="modal" id="delete-modal">
-      <h2 class="modal__title">Are you sure?</h2>
-      <p class="modal__content">
-        Are you sure you want to delete this item? This action can't be made
-        undone!
-      </p>
-      <div class="modal__actions">
-        <button class="btn btn--passive">No (Cancel)</button>
-        <button class="btn btn--danger">Yes</button>
-      </div>
-    </div>
-
-    <header>
-      <h1>Product Management System</h1>
-      <button>ADD PRODUCT</button>
-    </header>
-
-    <main>
-      <section id="entry-text" class="card">
-        <p>Your product management system</p>
-      </section>
-      <ul id="movie-list"></ul>
-    </main> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
