--- a/index.html
+++ b/index.html
@@ -49,13 +49,7 @@
       </div>
     </nav>
     <div id="root"></div>
-    <div
-      class="alert alert-success me-3 collapse"
-      role="alert"
-      id="action-alert"
-    >
-      A Product added successfully !!
-    </div>
+    <div class="alert me-3 collapse" role="alert" id="action-alert"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
